# docker-erc

./: .gitignore  Dockerfile  README.md  build_main.sh  build_test.sh  download_image.sh  draw_2d_map.py  install-manual.sh  leo-erc.repos  nvidia-launch.sh  regular-launch.sh  scp-install.sh  start.sh  steps.md  test-launch.sh
2d_map_drawer/: data.json  draw_2d_map.py  points.csv  waypoint_csv_to_json.py
ar_tags/: marsyard.world
camera_vision/: ar_tracker.py
launch/: terrain_mapping.launch
map/: map.yaml
rover_manual_setup/: autonomy.launch  install-manual.sh  scp-install.sh
src/camera_vision/: ar_tracker.py
src/camera_vision/scripts/: ar_tracker.py
src/erc_example/launch/: erc_bringup.launch
src/map_publisher/: CMakeLists.txt  package.xml
src/map_publisher/scripts/: map_publisher.py
src/webcam_ar_track/launch/: webcam_indiv.launch
